Updated partner page new styling

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 	<div class="meta row">
 		<div class="four columns offset-by-eight">
 			<div class="meta-content">
-				<p>This is where our meta content goes</p>
+				<p>The Right to Heal: Saturday, July 16th 2013</p>
 			</div>
 		</div>
 	</div>
@@ -54,6 +54,7 @@
 	<div class="body row">
 		<div class="twelve columns">
 			<div class="content">
+				This is some body content
 			</div>
 		</div>
 	</div>
@@ -61,6 +62,7 @@
 	<div class="footer row">
 		<div class="twelve columns">
 			<div class="content">
+				This is some footer content
 			</div>
 		</div>
 	</div>
