--- a/app/join.html
+++ b/app/join.html
@@ -11,92 +11,62 @@
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-Partners</title>
+		<title>GHFF-About</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-		<div class="header">
-			<div class="row">
-
-				<div class="logo-container">
-					<div class="eight columns end"></div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="twelve columns">
-					<div class="navigaton">
-						<ul class="nav-bar">
-							<li class="nav-item">
-								<a href="index.html">Home</a>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="why.html">Why</a>
-									</li>
-									<li>
-										<a href="who.html">Who We Are</a>
-									</li>
-									<li>
-										<a href="schedule.html">Festival Schedule</a>
-									</li>
-								</ul>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="submit.html">Submit A Film</a>
-								<a href="submit.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="instructions.html">Instructions</a>
-									</li>
-									<li>
-										<a href="upload.html">Upload</a>
-									</li>
-								</ul>
-							</li>
-							<li class="nav-item">
-								<a href="partners.html">Partners</a>
-							</li>
-							<li class="nav-item active">
-								<a href="join.html">Join us</a>
-							</li>
-						</ul>
-					</div>
+		<div class="meta row">
+			<div class="four columns offset-by-eight">
+				<div class="meta-content">
+					<p>The Right to Heal: Saturday, July 16th 2013</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="content-container">
-			<div class="row">
-				<div class="twelve columns">
-					<div class="content">
-						<h1>Join Us</h1>
-					</div>
-				</div>
+		<div class="header row">
+			<div class="five columns">
+				<div class="logo-container"></div>
 			</div>
-			<div class= "row">
-				<div class="six columns end">
+			<div class="seven columns">
+				<ul class="nav">
+					<li class="nav-item">
+						<a href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a href="schedule.html">Schedule</a>
+					</li>
+					<li class="nav-item">
+						<a href="submit.html">Submit A Film</a>
+					</li>
+					<li class="nav-item active">
+						<a href="join.html">Join us</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="body row">
+			<div class="twelve columns">
+				<div class="content">
 					<p>
 						Interested in what we are doing and want to remain up to date on our happenings and projects we care about? Joing our mailing list here: HYPERLINK TO SIGN UP FORM
 					</p>
-				</div>
-			</div>
-			<div class="row vert-pad">
-				<div class="six columns end">
 					<p>
 						Want to help out? Sign up to volunteer and hear more about opportunities beyond the film festival. Lorem ipsum dolor sit amet, nobis reformidans est ei, no est movet zril dissentiunt. Has soluta mandamus praesent et, quodsi moderatius te cum, eirmod conceptam eu vel. Alia dicta propriae duo no, virtute adversarium accommodare sit ea.
 					</p>
 				</div>
 			</div>
+		</div>
 
+		<div class="footer row">
+			<div class="twelve columns">
+				<div class="content">This is some footer content</div>
+			</div>
 		</div>
 
 		<script src="javascripts/jquery.js"></script>
