--- a/app/partners.html
+++ b/app/partners.html
@@ -8,135 +8,118 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
+
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-Partners</title>
+		<title>GHFF</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-		<div class="header">
-			<div class="row">
-				<div class="eight columns end">
-					<div class="logo-container"></div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="twelve columns">
-					<div class="navigaton">
-						<ul class="nav-bar">
-							<li class="nav-item">
-								<a href="index.html">Home</a>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="why.html">Why</a>
-									</li>
-									<li>
-										<a href="who.html">Who We Are</a>
-									</li>
-									<li>
-										<a href="schedule.html">Festival Schedule</a>
-									</li>
-								</ul>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="submit.html">Submit A Film</a>
-								<a href="submit.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="instructions.html">Instructions</a>
-									</li>
-									<li>
-										<a href="upload.html">Upload</a>
-									</li>
-								</ul>
-							</li>
-
-							<li class="nav-item active">
-								<a href="partners.html">Partners</a>
-							</li>
-							<li class="nav-item">
-								<a href="join.html">Join us</a>
-							</li>
-						</ul>
-					</div>
+		<div class="meta row">
+			<div class="four columns offset-by-eight">
+				<div class="meta-content">
+					<p>The Right to Heal: Saturday, July 16th 2013</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="content-container">
-			<div class="row">
-				<div class="twelve columns">
-					<div class="content">
-						<h1>Partners</h1>
+		<div class="header row">
+			<div class="five columns">
+				<div class="logo-container"></div>
+			</div>
+			<div class="seven columns">
+				<ul class="nav">
+					<li class="nav-item">
+						<a href="index.html">Home</a>
+					</li>
+					<li class="nav-item active">
+						<a href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a href="schedule.html">Schedule</a>
+					</li>
+					<li class="nav-item">
+						<a href="submit.html">Submit A Film</a>
+					</li>
+					<li class="nav-item">
+						<a href="join.html">Join us</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="body row">
+			<div class="twelve columns content-container">
+
+				<div class="row">
+					<div class="twelve columns">
+						<h4>Partners</h4>
+					</div>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="strong">IGOT</p>
+							<p>
+								This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<P class="strong">GPAS</p>
+							<p>
+								This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<P class="strong">Own2Feet</p>
+							<p>
+								This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<P class="strong">ALittle4Alot</p>
+							<p>
+								This is the description of partner four.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row vert-pad">
-			<div class="three columns">
-				<div class="partner-image">
-					<img src="http://placehold.it/200x150&text=image+one+here"></div>
-			</div>
-			<div class="nine columns">
-				<div class="partner-text">
-					<h5>IGOT</h5>
-					<p>
-						This is the description of IGOT.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="row vert-pad">
-			<div class="three columns">
-				<div class="partner-image">
-					<img src="http://placehold.it/200x150&text=image+two+here"></div>
-			</div>
-			<div class="nine columns">
-				<div class="partner-text">
-					<h5>GPAS</h5>
-					<p>
-						This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="row vert-pad">
-			<div class="three columns">
-				<div class="partner-image">
-					<img src="http://placehold.it/200x150&text=image+three+here"></div>
-			</div>
-			<div class="nine columns">
-				<div class="partner-text">
-					<h5>Own2Feet</h5>
-					<p>
-						This is the description of Own2Feet.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="row vert-pad">
-			<div class="three columns">
-				<div class="partner-image">
-					<img src="http://placehold.it/200x150&text=image+four+here"></div>
-			</div>
-			<div class="nine columns">
-				<div class="partner-text">
-					<h5>ALittle4ALot</h5>
-					<p>
-						This is the description of ALittle4ALot.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-					</p>
-				</div>
+		<div class="footer row">
+			<div class="twelve columns">
+				<div class="content">This is some footer content</div>
 			</div>
 		</div>
 
