--- a/app/schedule.html
+++ b/app/schedule.html
@@ -8,121 +8,115 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
+
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-About</title>
+		<title>GHFF</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-		<div class="header">
-			<div class="row">
-				<div class="eight columns end">
-					<div class="logo-container"></div>
+		<div class="meta row">
+			<div class="four columns offset-by-eight">
+				<div class="meta-content">
+					<p>The Right to Heal: Saturday, July 16th 2013</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="twelve columns">
-					<div class="navigaton">
-						<ul class="nav-bar">
-							<li class="nav item">
-								<a href="index.html">Home</a>
-							</li>
-							<li class="has-flyout nav-item active">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="why.html">Why</a>
-									</li>
-									<li>
-										<a href="who.html">Who We Are</a>
-									</li>
-									<li>
-										<a href="schedule.html">Festival Schedule</a>
-									</li>
-								</ul>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="submit.html">Submit A Film</a>
-								<a href="submit.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="instructions.html">Instructions</a>
-									</li>
-									<li>
-										<a href="upload.html">Upload</a>
-									</li>
-								</ul>
-							</li>
+		</div>
 
-							<li class="nav-item">
-								<a href="partners.html">Partners</a>
-							</li>
-							<li class="nav-item">
-								<a href="join.html">Join us</a>
-							</li>
-						</ul>
+		<div class="header row">
+			<div class="five columns">
+				<div class="logo-container"></div>
+			</div>
+			<div class="seven columns">
+				<ul class="nav">
+					<li class="nav-item">
+						<a href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a href="about.html">About</a>
+					</li>
+					<li class="nav-item active">
+						<a href="schedule.html">Schedule</a>
+					</li>
+					<li class="nav-item">
+						<a href="submit.html">Submit A Film</a>
+					</li>
+					<li class="nav-item">
+						<a href="join.html">Join us</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="body row">
+			<div class="twelve columns">
+			<div class="twelve columns">
+				<div class="content">
+					<div>
+						<h5>Saturday July 6, 2013</h5>
+						<h5>Location TBD</h5>
+						<h5>7pm-10pm, with live performance by XX after premier</h5>
+						<h5>RSVP on Facebook here!</h5>
 					</div>
 				</div>
 			</div>
-		</div>
-
-		<div class="content-container">
-			<div class="row">
-				<div class="twelve columns"></div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="twelve columns">
-				<h5>Saturday July 6, 2013</h5>
-				<h5>Location TBD</h5>
-				<h5>7pm-10pm, with live performance by XX after premier</h5>
-				<h5>RSVP on Facebook here!</h5>
-			</div>
-		</div>
-		<div class="row">
 			<div class="twelve columns">
 				<h4>Feature Film</h4>
-				<h5>Title of Film (time)</h5>
+			</div>
+			<div class= "three columns image">
+				<img src="http://placehold.it/200x150&text=image+one+here"></div>
+			<div class="nine columns">
+				<p class="strong text">Title of Film (time)</p>
 				<p>
 					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
 				</p>
 			</div>
+		<div class="twelve columns vert-pad">
+			<h4>Short Films</h4>
 		</div>
-		<div class="row">
-			<div class="twelve columns">
-				<h4>Short Films</h4>
+		<div class="three columns image">
+			<img src="http://placehold.it/200x150&text=image+one+here"></div>
+		<div class="nine columns">
 				<p class="strong">Title of Film (time)</p>
 				<p>
-					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+					This is a description of film 1.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 				</p>
 			</div>
-		</div>
-		<div class="row vert-pad">
 			<div class="twelve columns">
+		</div>
+		<div class="vert-pad">
+		<div class="three columns image">
+			<img src="http://placehold.it/200x150&text=image+one+here"></div>
+		<div class="nine columns vert-pad">
 				<p class="strong">Title of Film (time)</p>
 				<p>
-					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+					This is a description of film 2.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 				</p>
 			</div>
 		</div>
-		<div class="row">
 			<div class="twelve columns">
+		</div>
+		<div class="three columns">
+			<img src="http://placehold.it/200x150&text=image+one+here"></div>
+		<div class="nine columns">
 				<p class="strong">Title of Film (time)</p>
 				<p>
-					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+					This is a description of film 3.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 				</p>
 			</div>
 		</div>
-		<script src="javascripts/jquery.js"></script>
-		<script src="javascripts/foundation.min.js"></script>
-		<script src="javascripts/app.js"></script>
+	</div>
+
+
+<div class="footer row">
+<div class="twelve columns">
+<div class="content">This is some footer content</div>
+</div>
+</div>
+<script src="javascripts/jquery.js"></script>
+<script src="javascripts/foundation.min.js"></script>
+<script src="javascripts/app.js"></script>
 </body>
-	</html>
+</html>
