--- a/app/why.html
+++ b/app/why.html
@@ -8,130 +8,121 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
+
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-About</title>
+		<title>GHFF</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-		<div class="header">
-			<div class="row">
-				<div class="eight columns end">
-					<div class="logo-container"></div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="twelve columns">
-					<div class="navigaton">
-						<ul class="nav-bar">
-							<li class="nav item">
-								<a href="index.html">Home</a>
-							</li>
-							<li class="has-flyout nav-item active">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="why.html">Why</a>
-									</li>
-									<li>
-										<a href="who.html">Who We Are</a>
-									</li>
-									<li>
-										<a href="schedule.html">Festival Schedule</a>
-									</li>
-								</ul>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="submit.html">Submit A Film</a>
-								<a href="submit.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="instructions.html">Instructions</a>
-									</li>
-									<li>
-										<a href="upload.html">Upload</a>
-									</li>
-								</ul>
-							</li>
-
-							<li class="nav-item">
-								<a href="partners.html">Partners</a>
-							</li>
-							<li class="nav-item">
-								<a href="join.html">Join us</a>
-							</li>
-						</ul>
-					</div>
+		<div class="meta row">
+			<div class="four columns offset-by-eight">
+				<div class="meta-content">
+					<p>The Right to Heal: Saturday, July 16th 2013</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="content-container">
-			<div class="row">
-				<div class="twelve columns">
-					<div class="content">
-						<h4>Why we are here</h4>
-					</div>
-				</div>
+		<div class="header row">
+			<div class="five columns">
+				<div class="logo-container"></div>
+			</div>
+			<div class="seven columns">
+				<ul class="nav">
+					<li class="nav-item active">
+						<a href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a href="schedule.html">Schedule</a>
+					</li>
+					<li class="nav-item">
+						<a href="submit.html">Submit A Film</a>
+					</li>
+					<li class="nav-item">
+						<a href="join.html">Join us</a>
+					</li>
+				</ul>
 			</div>
 		</div>
-		<div class="row vert-pad">
+<body>
+		<div class="body row">
+	<div class="four columns offset-by-eight">
+		<div class="link">
+			<a href="who.html">Who</a>
+		</div>
+	</div>
+
+	<div class="four columns offset-by-eight">
+		<div class="link">
+			<a href="why.html">Why</a>
+		</div>
+	</div>
+		<div class="four columns offset-by-eight">
+		<div class="link">
+			<a href="partners.html">Partners</a>
+		</div>
+	</div>
 			<div class="twelve columns">
-				<p>
-					Film festivals have the power to bring issues to life, to connect people and motivate the masses.  If the saying “a picture is worth a thousand words” we are hoping a video is worth a million!  
+				<div class="content">
+					<h4>Why we are here</h4>
+				</div>
+			</div>
+			<div class="vert-pad">
+				<div class="long-text">
+				<div class="twelve columns">
+					<p>
+						Film festivals have the power to bring issues to life, to connect people and motivate the masses.  If the saying “a picture is worth a thousand words” we are hoping a video is worth a million!  
 The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
-				</p>
+					</p>
+				</div>
+			<div class="row">
+				<div class="one columns"></div>
+				<div class="eleven columns">
+					<p class="strong">Safe, effective surgery globally</p>
+					<p>
+						Did you know XX% of the world die or are disabled due to lack of access to surgery
+					</p>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="one columns"></div>
-			<div class="eleven columns">
-				<p class="strong">Safe, effective surgery globally</p>
-				<p>
-					Did you know XX% of the world die or are disabled due to lack of access to surgery
-				</p>
+			<div class="row vert-pad">
+				<div class="one columns"></div>
+				<div class="eleven columns">
+					<p class="strong">Safe, clean and effective hospital systems</p>
+					<p>
+						Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
+					</p>
+				</div>
 			</div>
-		</div>
-		<div class="row vert-pad">
-			<div class="one columns"></div>
-			<div class="eleven columns">
-				<p class="strong">Safe, clean and effective hospital systems</p>
-				<p>
-					Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
-				</p>
+			<div class="row">
+				<div class="one columns"></div>
+				<div class="eleven columns">
+					<p class="strong">Access to rehabilitation and therapy</p>
+					<p>
+						Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
+					</p>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="one columns"></div>
-			<div class="eleven columns">
-				<p class="strong">Access to rehabilitation and therapy</p>
-				<p>
-					Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
-				</p>
+			<div class="row vert-pad">
+				<div class="one columns"></div>
+				<div class="eleven columns">
+					<p class="strong">Public policy and resource allocation for surgical systems</p>
+					<p>
+						Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
+					</p>
+				</div>
 			</div>
-		</div>
-		<div class="row vert-pad">
-			<div class="one columns"></div>
-			<div class="eleven columns">
-				<p class="strong">Public policy and resource allocation for surgical systems</p>
-				<p>
-					Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
-				</p>
-			</div>
-		</div>
-		<div class="row">
 			<div class="twelve columns">
 				<p>
 					Want to learn more and help us advocate for the festival?  Sign our petition in support of XXX: hyperlink
 				</p>
+			</div>
+				</div>
 			</div>
 		</div>
 		<script src="javascripts/jquery.js"></script>
