--- a/app/about.html
+++ b/app/about.html
@@ -8,84 +8,78 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
+
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-About</title>
+		<title>GHFF</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-		<div class="header">
-			<div class="row">
-				<div class="eight columns end">
-					<div class="logo-container vert-pad"></div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="twelve columns">
-					<div class="navigaton">
-						<ul class="nav-bar">
-							<li class="nav item">
-								<a href="index.html">Home</a>
-							</li>
-							<li class="has-flyout nav-item active">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="why.html">Why</a>
-									</li>
-									<li>
-										<a href="who.html">Who We Are</a>
-									</li>
-									<li>
-										<a href="schedule.html">Festival Schedule</a>
-									</li>
-								</ul>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="submit.html">Submit A Film</a>
-								<a href="submit.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="instructions.html">Instructions</a>
-									</li>
-									<li>
-										<a href="upload.html">Upload</a>
-									</li>
-								</ul>
-							</li>
-
-							<li class="nav-item">
-								<a href="partners.html">Partners</a>
-							</li>
-							<li class="nav-item">
-								<a href="join.html">Join us</a>
-							</li>
-						</ul>
-					</div>
-				</div>
+	<div class="meta row">
+		<div class="four columns offset-by-eight">
+			<div class="meta-content">
+				<p>The Right to Heal: Saturday, July 16th 2013</p>
 			</div>
 		</div>
+	</div>
 
-		<div class="content-container">
-			<div class="row">
-				<div class="twelve columns">
-					<div class="content">
-						<h1>About</h1>
-					</div>
-				</div>
+	<div class="header row">
+		<div class="five columns">
+			<div class="logo-container"></div>
+		</div>
+		<div class="seven columns">
+			<ul class="nav">
+				<li class="nav-item ">
+					<a href="index.html">Home</a>
+				</li>
+				<li class="nav-item active">
+					<a href="about.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a href="schedule.html">Schedule</a>
+				</li>
+				<li class="nav-item">
+					<a href="submit.html">Submit A Film</a>
+				</li>
+				<li class="nav-item">
+					<a href="join.html">Join us</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="body row">
+	<div class="four columns offset-by-eight">
+		<div class="link">
+			<a href="who.html">Who</a>
+		</div>
+	</div>
+	
+
+	<div class="four columns offset-by-eight">
+		<div class="link">
+			<a href="why.html">Why</a>
+		</div>
+	</div>
+	<div class="four columns offset-by-eight">
+		<div class="link">
+			<a href="partners.html">Partners</a>
+		</div>
+	</div>
+</div>
+	<div class="footer row">
+		<div class="twelve columns">
+			<div class="content">
+				This is some footer content
 			</div>
 		</div>
+	</div>
 
-		<script src="javascripts/jquery.js"></script>
-		<script src="javascripts/foundation.min.js"></script>
-		<script src="javascripts/app.js"></script>
+	<script src="javascripts/jquery.js"></script>
+	<script src="javascripts/foundation.min.js"></script>
+	<script src="javascripts/app.js"></script>
 </body>
-	</html>
+</html>
